@@ -1,9 +1,7 @@
 package com.kurt.gym.core.serviceImpl;
 
-import com.kurt.gym.core.persistence.entity.GymClass;
-import com.kurt.gym.core.persistence.entity.GymClassType;
-import com.kurt.gym.core.persistence.entity.Schedule;
-import com.kurt.gym.core.persistence.entity.Store;
+import com.kurt.gym.core.persistence.helper.data.SalesAndVat;
+import com.kurt.gym.core.persistence.entity.*;
 import com.kurt.gym.core.persistence.repository.GymClassRepository;
 import com.kurt.gym.core.rest.api.util.*;
 import com.kurt.gym.core.services.StoreService;
@@ -11,18 +9,18 @@ import com.kurt.gym.helper.service.ApiMessage;
 import lombok.RequiredArgsConstructor;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.cache.annotation.CacheEvict;
 import org.springframework.cache.annotation.Cacheable;
+import org.springframework.cache.annotation.Caching;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
 import java.text.DateFormat;
 import java.text.SimpleDateFormat;
-import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.*;
-import java.util.stream.Collectors;
 
 
 @RequiredArgsConstructor
@@ -33,6 +31,11 @@ public class StoreServiceImpl implements StoreService {
     private final Logger logger = LoggerFactory.getLogger(StoreServiceImpl.class);
 
     @Override
+    @Caching(
+            evict = {
+                    @CacheEvict(cacheNames = "fid-store-by-id", key = "#t.id")
+            }
+    )
     public ResponseEntity<HashMap<String, String>> save(Store t) {
         StoreUtil.save(t);
 
@@ -40,6 +43,11 @@ public class StoreServiceImpl implements StoreService {
     }
 
     @Override
+    @Caching(
+            evict = {
+                    @CacheEvict(cacheNames = "fid-store-by-id", key = "#t.id")
+            }
+    )
     public ResponseEntity<HashMap<String, String>> delete(Store t) {
         StoreUtil.delete(t);
 
@@ -47,6 +55,11 @@ public class StoreServiceImpl implements StoreService {
     }
 
     @Override
+    @Caching(
+            evict = {
+                    @CacheEvict(cacheNames = "find-store-by-id", key = "#t.id")
+            }
+    )
     public ResponseEntity<HashMap<String, String>> deleteById(Long id) {
         return ApiMessage.successResponse("Store Data Deleted Successfully");
     }
@@ -60,6 +73,7 @@ public class StoreServiceImpl implements StoreService {
     }
 
     @Override
+    @Cacheable(cacheNames = "find-store-by-id", key = "#id")
     public ResponseEntity<?> findOne(Long id) {
         Store store = StoreUtil.findById(id);
 
@@ -69,6 +83,12 @@ public class StoreServiceImpl implements StoreService {
         return new ResponseEntity<>(
                 store,
                 HttpStatus.OK);
+    }
+
+    @Override
+    @Cacheable(cacheNames = "store-reference-by-id", key = "id")
+    public Store referenceById(Long id) {
+        return StoreUtil.getReferenceById(id);
     }
 
 
@@ -95,9 +115,9 @@ public class StoreServiceImpl implements StoreService {
     }
 
     @Override
+    @Cacheable(value = "store-sales", key = "new org.springframework.cache.interceptor.SimpleKey(#id, #date, #length)")
     public ResponseEntity<?> getDateSale(Long id, Date date, int length) {
-
-        HashMap<String, Double> result = new HashMap<>();
+        HashMap<String, SalesAndVat> result = new HashMap<>();
         Calendar startDate = Calendar.getInstance();
         startDate.setTime(date);
         DateFormat df = new SimpleDateFormat("yyyy-MM-dd");
@@ -105,10 +125,14 @@ public class StoreServiceImpl implements StoreService {
         while (length != 0) {
 
             Double storeSale = StoreUtil.findSalesInStoreBetweenDate(id, startDate.getTime());
+            Double storeVat = StoreUtil.findVatInStoreBetweenDate(id, startDate.getTime());
+
+            if (storeSale == null) storeSale = 0D;
+            if (storeVat == null) storeVat = 0D;
 
             String requiredDate = df.format(startDate.getTime());
 
-            result.put(requiredDate, storeSale);
+            result.put(requiredDate, new SalesAndVat(storeSale, storeVat));
 
             startDate.add(Calendar.DAY_OF_MONTH, -1);
             length--;
@@ -118,6 +142,7 @@ public class StoreServiceImpl implements StoreService {
     }
 
     @Override
+    @Cacheable(cacheNames = "today-schedules")
     public ResponseEntity<?> getTodaySchedules() {
         LocalDateTime now = LocalDateTime.now();
         DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd");
@@ -126,13 +151,11 @@ public class StoreServiceImpl implements StoreService {
         logger.info("======================== Getting Today Schedule ==================");
         logger.info(formattedDateTime);
         Set<Schedule> todaySchedule = ScheduleUtil.getScheduleTargetDate(formattedDateTime);
-        System.out.println("the reuslt");
-        System.out.println(todaySchedule);
         List<GymClass> gymClasses = todaySchedule.stream().map(e -> {
             GymClass gymClass = GymClassUtil.getGymClassWithoutSchedules(e.getGymClass().getId());
             gymClass.getSchedules().add(e);
             return gymClass;
-        }).collect(Collectors.toList());
+        }).toList();
 
         return new ResponseEntity<>(gymClasses, HttpStatus.OK);
     }
